<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

<!--        binding data -->
        <variable
            name="viewModel"
            type="com.abdo.theshoestore.ShoeViewModel" />
       <variable
           name="shoe"
           type="com.abdo.theshoestore.Shoe" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ShoeDetialsFragment">

<!--        display text -->
        <TextView
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_shoe" />

<!--

    edit text for shoeName , company ,shoeSize
    description

    using two way binding

-->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/shoe_name"
            android:text="@={shoe.shoeName}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/company"
            android:text="@={shoe.company}" />

        <EditText
            android:text="@={shoe.shoeSize}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/shoe_size" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:text="@={shoe.description}"
            android:lines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
<!--
    two button to navigate back to listFragment
    save => for back to listFragment and save data
    cancel => for back
-->

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:onClick="@{() -> viewModel.addShoe(shoe)}"
                android:text="@string/save" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</layout>