<?xml version="1.0" encoding="utf-8"?>
<layout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginFragment">

    <!-- login Fragment
     EditText for email and password
     button for login and create
     this two button navigate to welcome fragment
     -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        android:padding="@dimen/_10dppadding"
        android:inputType="textEmailAddress"
       />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_10dppadding"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/login"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_create"
        android:text="@string/create"
        />

</LinearLayout>
</layout>
